--- a/index.html
+++ b/index.html
@@ -1648,13 +1648,20 @@ summary {
 </div>
 <div id="model-planning-and-building" class="section level3">
 <h3>2. Model Planning and Building</h3>
-<p>Coming soon…</p>
-<p><a href="https://introdsci.github.io/DataScience-aswingler1/phase2.html" class="uri">https://introdsci.github.io/DataScience-aswingler1/phase2.html</a></p>
+<p>For this phased I found data on how many generations each congressperson has been in the country and used that to predict how likely their vote was to align with Trump.</p>
+<p><a href="https://introdsci.github.io/DataScience-aswingler1/phase2.nb.html" class="uri">https://introdsci.github.io/DataScience-aswingler1/phase2.nb.html</a></p>
 </div>
 <div id="results-and-operationalization" class="section level3">
 <h3>3. Results and Operationalization</h3>
 <p>Coming soon…</p>
+<p><a href="https://introdsci.github.io/DataScience-aswingler1/Phase3.nb.html" class="uri">https://introdsci.github.io/DataScience-aswingler1/Phase3.nb.html</a></p>
 </div>
+</div>
+<div id="conclusion" class="section level2">
+<h2>Conclusion</h2>
+<p>I think my analysis of this data is very interesting to know. In the first phase of this project I looked at which states politicians votes align with Trump. States like Texas tend to agree with Trump while states like Vermont almost never do. I think this data is very interesting to see even though it shouldn’t be a surprise to anyone who pays attention to United States politics.</p>
+<p>In the second phase of the project I decided to take a look at how each politicians likelyhood to vote for Trumps position is affected by how many generations they have lived in the United States. I proved that first generation immigrants were the least likely to vote with Trump and third generation and later politicians were the most likely to agree with him. It turns out that generation is a good predictor of of their votes.</p>
+<p>The information learned from this project can be used to educate voters on weather their representatives in congress are voting for things they want. Although it shouldn’t be used exculsively to decide who to vote for, being able to predict how a given politician will vote based on their generation may also be useful information for voters to factor in to their decisions.</p>
 </div>
 
 
